--- a/Chat2Desk/Chat2Desk.csproj
+++ b/Chat2Desk/Chat2Desk.csproj
@@ -62,9 +62,11 @@
     <Compile Include="Services\HttpService.cs" />
     <Compile Include="Services\IHttpService.cs" />
     <Compile Include="Types\ApiMode.cs" />
-    <Compile Include="Types\Response\ApiResponse.cs" />
+    <Compile Include="Types\ApiResponse.cs" />
+    <Compile Include="Types\Attachment.cs" />
     <Compile Include="Types\Channel.cs" />
     <Compile Include="Types\Client.cs" />
+    <Compile Include="Types\ClientResponse.cs" />
     <Compile Include="Types\ClientTransports.cs" />
     <Compile Include="Types\Dialog.cs" />
     <Compile Include="Types\DialogLastMessage.cs" />
@@ -74,14 +76,15 @@
     <Compile Include="Types\Enums\Read.cs" />
     <Compile Include="Types\Enums\ResponseStatus.cs" />
     <Compile Include="Types\Enums\Role.cs" />
+    <Compile Include="Types\Enums\TagType.cs" />
     <Compile Include="Types\Enums\Transport.cs" />
     <Compile Include="Types\Info.cs" />
     <Compile Include="Types\Message.cs" />
-    <Compile Include="Types\Response\ClientResponse.cs" />
-    <Compile Include="Types\Response\MessageReponse.cs" />
+    <Compile Include="Types\MessageResponse.cs" />
+    <Compile Include="Types\MessageType.cs" />
     <Compile Include="Types\Meta.cs" />
     <Compile Include="Types\Operator.cs" />
-    <Compile Include="Types\Response.cs" />
+    <Compile Include="Types\Order.cs" />
     <Compile Include="Types\Tag.cs" />
     <Compile Include="Types\Template.cs" />
     <Compile Include="Utils\EnumUtils.cs" />
